Navbar kinda sorted, bug on collapse button to be sorted later

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a, a:link, a:visited {
 }
 
 a:hover {
-    font:bolder ;
+    text-decoration: underline;
 }
 
 ol, ul {
@@ -45,7 +45,7 @@ ol, ul {
     color: gray;
     text-decoration: none;
     margin-left: 10px;
-    font-weight: bold;
+    font-weight: bold;   
 }
 
 .main-menu li a:after{
@@ -57,11 +57,6 @@ ol, ul {
 /* Front-page*/
 .front-page-image {
     flex: auto;
-}
-
-.text-box {
-    background-color: gray;
-    color: antiquewhite;
 }
 
 /* Sticky footer */ 
